--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ insert_final_newline = true
 [*]
 charset = utf-8
 
-[*.js, *.yml, *.json, *.conf, *.md]
+[*.js, *.json, *.pug]
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
