--- a/crawler/package.json
+++ b/crawler/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.19.2",
     "htmlparser2": "^4.1.0",
     "redis": "^3.0.2",
-    "redlock": "^4.1.0"
+    "redlock": "^4.1.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "jest": "^26.4.0",
