Adds a docker-compose file and adds schema creation into crawler's codebase.

--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -1,7 +1,10 @@
-FROM rabbitmq:3-management
+# https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
 
-RUN rabbitmq-plugins --offline enable rabbitmq_peer_discovery_etcd
-COPY rabbitmq.conf /etc/rabbitmq/
+FROM node:14
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN npm install --only=prod
+COPY . .
 
 ## Add the wait script to the image
 # https://github.com/ufoscout/docker-compose-wait
@@ -9,4 +12,4 @@ ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.7.3/wait
 RUN chmod +x /wait
 
 
-CMD ["sh", "-c", "/wait && rabbitmq-server"]
+CMD ["sh", "-c", "/wait && node crawler.js"]
