--- a/queue/rabbitmq.conf
+++ b/queue/rabbitmq.conf
@@ -1,3 +1,7 @@
 cluster_formation.peer_discovery_backend = etcd
 
 cluster_formation.etcd.endpoints.1 = configuration-service:2379
+cluster_formation.discovery_retry_limit = 50
+cluster_formation.etcd.cluster_name = crawler
+
+loopback_users = none
